--- a/msvc/lluv.vcproj
+++ b/msvc/lluv.vcproj
@@ -233,6 +233,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\lluv_req.c"
+				>
+			</File>
+			<File
 				RelativePath="..\src\lluv_signal.c"
 				>
 			</File>
@@ -316,6 +320,10 @@
 			</File>
 			<File
 				RelativePath="..\src\lluv_prepare.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\lluv_req.h"
 				>
 			</File>
 			<File
