Add. `misc` module

--- a/msvc/lluv.vcproj
+++ b/msvc/lluv.vcproj
@@ -221,6 +221,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\lluv_misc.c"
+				>
+			</File>
+			<File
 				RelativePath="..\src\lluv_pipe.c"
 				>
 			</File>
@@ -308,6 +312,10 @@
 			</File>
 			<File
 				RelativePath="..\src\lluv_loop.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\lluv_misc.h"
 				>
 			</File>
 			<File
