--- a/msvc/lluv.vcproj
+++ b/msvc/lluv.vcproj
@@ -237,6 +237,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\lluv_process.c"
+				>
+			</File>
+			<File
 				RelativePath="..\src\lluv_req.c"
 				>
 			</File>
@@ -328,6 +332,10 @@
 			</File>
 			<File
 				RelativePath="..\src\lluv_prepare.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\lluv_process.h"
 				>
 			</File>
 			<File
