Run Tests on OSX

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,26 @@
-language: c
+language: objective-c
 
 env:
   global:
     - LUAROCKS=2.2.0
   matrix:
     - LUA=lua5.1
-    - LUA=lua5.2
-    - LUA=luajit
+    # - LUA=lua5.2
+    # - LUA=luajit
 
 branches:
   only:
     - master
 
 before_install:
-  - sudo apt-get update
+  # - sudo apt-get update
   - bash .travis/setup_lua.sh
   - bash .travis/setup_uv.sh
-  - sudo luarocks install lunitx
-  - sudo pip install cpp-coveralls
+  # - sudo luarocks install lunitx
+  # - sudo pip install cpp-coveralls
 
 install:
-  - sudo luarocks make rockspecs/lluv-scm-0.rockspec UV_INCDIR=./libuv/include UV_LIBDIR=./libuv/out/Release
+  - sudo luarocks make rockspecs/lluv-scm-0.rockspec UV_INCDIR=./libuv/include UV_LIBDIR=./libuv/build/Release
 
 script: 
   - cd test
