Add. FTP module.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,8 @@ script:
   - lua test-active.lua
   - lua -e"require'lluv.utils'.self_test()"
   - lua -e"require'lluv.memcached'.self_test()"
+  - lua -e"require'lluv.ftp'.self_test('127.0.0.1', 'moteus', '123456')"
   - lunit.sh test-fs.lua
-  - cd ../examples
-  - lua -e"require'ftp'.self_test('127.0.0.1', 'moteus', '123456')"
 
 # after_success:
 #   - coveralls -b .. -r .. --dump c.report.json
