Add. stream:write support array. ```Lua sock:write{"Hello", ", ", "world", "!!!"} ```

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
 script: 
   - cd test
   - lua test-active.lua
+  - lua test-multi-write.lua
   - lua -e"require'lluv.utils'.self_test()"
   - lua -e"require'lluv.memcached'.self_test()"
   - lua -e"require'lluv.ftp'.self_test('127.0.0.1', 'moteus', '123456')"
