Run tests on Lua 5.1/5.2/JIT

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ env:
     - LUAROCKS=2.2.0
   matrix:
     - LUA=lua5.1
-    # - LUA=lua5.2
-    # - LUA=luajit
+    - LUA=lua5.2
+    - LUA=luajit
 
 services:
   - memcached
