--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   matrix:
     - LUA=lua5.1
     - LUA=lua5.2
+    - LUA=lua5.3
     - LUA=luajit
 
 services:
@@ -20,9 +21,12 @@ before_install:
   - bash .travis/setup_lua.sh
   - bash .travis/setup_uv.sh
   - bash .travis/setup_ftp.sh
-  - sudo luarocks install lunitx
-  - sudo luarocks install lua-path
-  - sudo luarocks install luafilesystem
+  - sudo luarocks install https://raw.github.com/moteus/lunit/moteus-skip/rockspecs/lunitx-scm.mot.skip-0.rockspec --deps-mode=none
+  - sudo luarocks install lua-path --deps-mode=none
+  - git clone https://github.com/moteus/luafilesystem.git luafilesystem
+  - cd ./luafilesystem
+  - sudo luarocks make rockspecs/luafilesystem-cvs-3.rockspec
+  - cd ..
   - sudo luarocks install vararg --from=https://rocks.moonscript.org/dev
   - sudo luarocks install luasocket
   # - sudo pip install cpp-coveralls
