Fix. LuaSocket module ignore SIGPIPE by default.

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ script:
   - cd ./luasocket
   - lua testsrvr.lua > /dev/null &
   - lua corun.lua testclnt.lua
+  - lua ts.lua > /dev/null &
+  - lua tt.lua
 
 # after_success:
 #   - coveralls -b .. -r .. --dump c.report.json
