--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,11 @@ before_install:
   - sudo luarocks install lua-path --deps-mode=none
   - sudo luarocks install luafilesystem --from=https://rocks.moonscript.org/dev
   - sudo luarocks install vararg --from=https://rocks.moonscript.org/dev
-  - sudo luarocks install luasocket scm --from=https://rocks.moonscript.org/dev
+  - if [ "$LUA" == "lua5.3" ]; then
+      sudo luarocks install luasocket scm --from=https://rocks.moonscript.org/dev CFLAGS="-O2 -fPIC -DLUA_COMPAT_APIINTCASTS";
+    else
+      sudo luarocks install luasocket scm --from=https://rocks.moonscript.org/dev;
+    fi
   # - sudo pip install cpp-coveralls
 
 install:
