--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,11 @@ before_install:
   - bash .travis/setup_lua.sh
   - bash .travis/setup_uv.sh
   - bash .travis/setup_ftp.sh
-  - sudo luarocks install https://raw.github.com/moteus/lunit/moteus-skip/rockspecs/lunitx-scm.mot.skip-0.rockspec --deps-mode=none
-  - sudo luarocks install lua-path --deps-mode=none
+  - sudo luarocks install lunitx --from=http://rocks.moonscript.org/manifests/moteus
   - sudo luarocks install luafilesystem --from=https://rocks.moonscript.org/dev
-  - sudo luarocks install vararg --from=https://rocks.moonscript.org/dev
-  - if [ "$LUA" == "lua5.3" ]; then
-      sudo luarocks install luasocket scm --from=https://rocks.moonscript.org/dev CFLAGS="-O2 -fPIC -DLUA_COMPAT_APIINTCASTS";
-    else
-      sudo luarocks install luasocket scm --from=https://rocks.moonscript.org/dev;
-    fi
+  - sudo luarocks install ltn12 --from=https://rocks.moonscript.org/dev
+  - sudo luarocks install lua-path
+  - sudo luarocks install vararg
   # - sudo pip install cpp-coveralls
 
 install:
