--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ script:
   - cd test
   - lua test-active.lua
   - lua test-multi-write.lua
+  - lua test_spawn.lua
   - lua -e"require'lluv.utils'.self_test()"
   - lua -e"require'lluv.memcached'.self_test()"
   - lua -e"require'lluv.ftp'.self_test('127.0.0.1', 'moteus', '123456')"
