:warning:Change. libuv handles is subject to Lua GC

--- a/msvc/lluv.vcproj
+++ b/msvc/lluv.vcproj
@@ -291,6 +291,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\lluv.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\lluv_check.h"
 				>
 			</File>
