--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ script:
   - lua test-multi-write.lua
   - lua test-spawn.lua
   - lua test-gc-timer.lua
+  - lua test-gc-tcp.lua
   - lua test-data.lua
   - lua -e"require'lluv.utils'.self_test()"
   - lua -e"require'lluv.memcached'.self_test()"
