Prepare release and bump version numbers to 0.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.obj
 *.elf
 
+
 # Libraries
 *.lib
 *.a
@@ -24,15 +25,12 @@
 
 #MSVC
 msvc/
+*.exp
+*.ilk
+*.pdb
 
 #ldoc
 doc/doc/
 
 #lake deps
 *.d
-
-# Incremental link MSVC
-*.ilk
-
-# Debug infromtation
-*.pdb
