--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_script:
   - luarocks install lunitx
   - luarocks install luafilesystem
   - luarocks install lua-path
+  - luarocks install vararg-lua
   # - pip install cpp-coveralls
 
 script:
