Update Travis file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,47 @@
 language: c
 
+python:
+  - "2.7"
+
 sudo: false
 
-env:
-  global:
-    - LUAROCKS=2.2.0
-  matrix:
-    - LUA=lua5.1
-    - LUA=lua5.2
-    - LUA=lua5.3
-    - LUA=luajit
+matrix:
+  include:
+    - compiler: ": Lua51"
+      env: LUA="lua 5.1"
+    - compiler: ": Lua52"
+      env: LUA="lua 5.2"
+    - compiler: ": Lua53"
+      env: LUA="lua 5.3"
+    - compiler: ": LuaJIT20"
+      env: LUA="luajit 2.0"
+    - compiler: ": LuaJIT21"
+      env: LUA="luajit 2.1"
+
+cache:
+  directories:
+    - here
+    - $HOME/.cache/pip
 
 branches:
   only:
     - master
 
 before_install:
-  - bash .travis/setup_uv.sh
-  - source .travis/setenv_lua.sh
+  - export CC=gcc
+  - pip install --user hererocks
+  - hererocks here -r^ --$LUA
+  - export PATH=$PATH:$PWD/here/bin
+  - luarocks show lluv || bash .travis/setup_uv.sh
 
 install:
   - luarocks make rockspecs/lluv-scm-0.rockspec UV_DIR=$TRAVIS_BUILD_DIR/libuv
 
 before_script:
-  - luarocks install lunitx
-  - luarocks install luafilesystem
-  - luarocks install lua-path
-  - luarocks install vararg-lua
-  # - pip install cpp-coveralls
+  - luarocks show lunitx        || luarocks install lunitx
+  - luarocks show luafilesystem || luarocks install luafilesystem
+  - luarocks show lua-path      || luarocks install lua-path
+  - luarocks show vararg-lua    || luarocks install vararg-lua
 
 script:
   - cd test
@@ -48,10 +62,6 @@ script:
   - lua corun.lua testclnt.lua
   - lua ts.lua > /dev/null &
   - lua defer_error.lua
-
-# after_success:
-#   - coveralls -b .. -r .. --dump c.report.json
-#   - luacov-coveralls -j c.report.json
 
 notifications:
   email:
