Add. gettimeofday function

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ script:
   - lua test-udp-connect.lua
   - lua test-os-handle.lua
   - lua test-os-socket.lua
+  - lua test-gettimeofday.lua
   - lua test-env.lua
   - lua test-error-handler.lua
   - lua -e"require'lluv.utils'.self_test()"
